--- a/webbutveckling_1/Lektioner/2021-09-07/navigation/other.html
+++ b/webbutveckling_1/Lektioner/2021-09-07/navigation/other.html
@@ -11,13 +11,13 @@
 <nav>
     <ul id="navbar">
         <li class="navbar-item">
-            <a class="navbar-link active" href='index.html'>Index</a>
+            <a class="navbar-link" href='index.html'>Index</a>
         </li>
         <li class="navbar-item">
             <a class="navbar-link" href='about.html'>About</a>
         </li>
         <li class="navbar-item">
-            <a class="navbar-link" href='other.html'>Other</a>
+            <a class="navbar-link active" href='other.html'>Other</a>
         </li>
         <li class="navbar-item">
             <a class="navbar-link" href="blogg.html">Blogg</a>
