Försöker få in en bild som bakgrund

--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -21,11 +21,13 @@
         </li>
         <li class="navbar-item">
             <a class="navbar-link" href="blogg.html">Blogg</a>
-        </li>  <li class="navbar-item">
-        <a class="navbar-link" href="courses.html">Courses</a>
-    </li>  <li class="navbar-item">
-        <a class="navbar-link active" href="products.html">Products</a>
-    </li>
+        </li>
+        <li class="navbar-item">
+            <a class="navbar-link" href="courses.html">Courses</a>
+        </li>
+        <li class="navbar-item">
+            <a class="navbar-link active" href="products.html">Products</a>
+        </li>
     </ul>
 </nav>
 
