--- a/webbutveckling_1/assignment/index.html
+++ b/webbutveckling_1/assignment/index.html
@@ -22,11 +22,13 @@
         </li>
         <li class="navbar-item">
             <a class="navbar-link" href="blogg.html">Blogg</a>
-        </li>  <li class="navbar-item">
-        <a class="navbar-link" href="courses.html">Courses</a>
-    </li>  <li class="navbar-item">
-        <a class="navbar-link" href="products.html">Products</a>
-    </li>
+        </li>
+        <li class="navbar-item">
+            <a class="navbar-link" href="courses.html">Courses</a>
+        </li>
+        <li class="navbar-item">
+            <a class="navbar-link" href="products.html">Products</a>
+        </li>
     </ul>
 </nav>
 
