--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -31,6 +31,29 @@
     </ul>
 </nav>
 
-<h1>Products</h1>
+<h1 class="header">Useful products for 8K gaming</h1>
+
+<section class="row">
+    <section class="column">
+        <h2>Column 1</h2>
+        <p>Some text..</p>
+    </section>
+    <section class="column">
+        <h2>Column 2</h2>
+        <p>Some text..</p>
+    </section>
+</section>
+
+<section class="row">
+    <section class="column">
+        <h2>Column 3</h2>
+        <p>Some text..</p>
+    </section>
+    <section class="column">
+        <h2>Column 4</h2>
+        <p>Some text..</p>
+    </section>
+</section>
+
 </body>
 </html>
