Har lagt till bilder och text i mina columns nu. Krävs mer finslipning men grunden sitter

--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -31,27 +31,59 @@
     </ul>
 </nav>
 
-<h1 class="header">Useful products for 8K gaming</h1>
+<h1 class="header">Useful products for 4K gaming</h1>
 
 <section class="row">
-    <section class="column">
-        <h2>Column 1</h2>
-        <p>Some text..</p>
+    <section class="column1">
+        <h2>GEFORCE RTX™ 3090 GRAPHICS CARD</h2>
+        <section>
+            <p>
+                "GeForce RTX ™ 3090 is a large and strong GPU with performance in the TITAN class. Featuring 2nd
+                generation NVIDIA RTX architecture Ampere, which enhances beam tracking and AI performance with enhanced
+                beam
+                tracking cores, Tensor cores and new streaming multiprocessors. It also has a full 24 GB of G6X memory
+                which
+                gives you the ultimate gaming experience" -NVIDIA</p>
+            <p>
+                "Even with the newest AAA games, the Nvidia GeForce RTX 3090 delivers amazing 4K performance and can
+                even
+                handle 8K gaming at 60fps, though it's not quite perfect at that level. So, while its predecessors may
+                have set a high bar to meet, it's proven to be up to the challenge" -Techradar.com
+            </p>
+            <p>
+                "The RTX 3090 is by far the most potent GPU in today’s market. It offers up unrivaled
+                gaming performance in modern titles, bringing 4K – and 8K gaming according to Nvidia – at 60 frames per
+                second to desktop gaming PCs" -WEPC.com
+            </p>
+        </section>
     </section>
-    <section class="column">
-        <h2>Column 2</h2>
-        <p>Some text..</p>
+    <section class="column2">
+        <img src="img/3090small.jpg" alt="3090 graphics card" height="400px">
+        <p>
+            <a href="https://www.pricerunner.se/sp/rtx-3090.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AiRtjPiUATUWFLfi6dmLdDn3T0UShcB28x1re_3K-Nbf6RyyQcfv3OBoCrkMQAvD_BwE"
+               target="_blank">Compare prices at Pricerunner</a></p>
     </section>
 </section>
 
 <section class="row">
-    <section class="column">
-        <h2>Column 3</h2>
-        <p>Some text..</p>
+    <section class="column3">
+        <img src="img/samsungg9.webp" alt="Samsung G9 monitor" height="400px" :>
+        <p>
+            <a href="https://www.pricerunner.se/sp/samsung-odyssey-g9.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AicuKymTKFCVsj3k9Uam9kTV24KN2K2X1RCLrXrGwfQembHI2IQLRxhoCclYQAvD_BwE"
+               target="_blank">Compare prices at Pricerunner</a></p>
     </section>
-    <section class="column">
-        <h2>Column 4</h2>
-        <p>Some text..</p>
+    <section class="column4">
+        <h2>SAMSUNG ODYSSEY G9</h2>
+        <p>"Odyssey delivers power and courage that makes the visual journey more exciting and immersive than ever.
+            Odyssey reflects tomorrow's gaming world and personifies the next generation of designs. We inspire courage
+            for gamers to dare to take on all kinds of challenges" -Komplett.se</p>
+        <p>"The Samsung 49-Inch Odyssey G9 has the most extreme curve we've seen yet, 1000R, and is one of the best
+            gaming monitors we've tested. At a comfortable viewing distance of 2-3 feet, it completely fills your
+            peripheral vision. But that's not all, it's a really good-looking monitor too" -Tomshardware.com</p>
+        <p>"
+            Is the Samsung Odyssey Neo G9 Worth Buying? The Samsung Odyssey Neo G9 is an excellent gaming monitor. It
+            delivers as much screen real estate as two 27-inch monitors without a bezel in the center and with an
+            incredible curve that brings you into the game" -Newsweek.com</p>
     </section>
 </section>
 
