Byter monitorbilden till en annan och skriver i README.

--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -67,7 +67,7 @@
 
 <section class="row">
     <section class="column3">
-        <img src="img/samsungg9.webp" alt="Samsung G9 monitor" height="400px" :>
+        <img src="img/samsungg92.jpg" alt="Samsung G9 monitor" height="400px">
         <p>
             <a href="https://www.pricerunner.se/sp/samsung-odyssey-g9.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AicuKymTKFCVsj3k9Uam9kTV24KN2K2X1RCLrXrGwfQembHI2IQLRxhoCclYQAvD_BwE"
                target="_blank">Compare prices at Pricerunner</a></p>
