Har lagt till en footer på alla sidor samt fixat headern.

--- a/webbutveckling_1/assignment/about.html
+++ b/webbutveckling_1/assignment/about.html
@@ -31,6 +31,14 @@
     </ul>
 </nav>
 
-<h1>About</h1>
+<h1 class="header">About</h1>
+
+
+
+<footer>
+    <p>Copyright © 2021 by StillUnknown<br>
+        <a href="mailto:knavinglogistic@hotmail.se">Mail to StillUnknown</a></p>
+</footer>
+
 </body>
 </html>
