--- a/webbutveckling_1/assignment/index.html
+++ b/webbutveckling_1/assignment/index.html
@@ -32,6 +32,14 @@
     </ul>
 </nav>
 
-<h1>Index</h1>
+<h1 class="header">Index</h1>
+
+
+
+<footer>
+    <p>Copyright © 2021 by StillUnknown<br>
+        <a href="mailto:knavinglogistic@hotmail.se">Mail to StillUnknown</a></p>
+</footer>
+
 </body>
 </html>
