--- a/webbutveckling_1/assignment/other.html
+++ b/webbutveckling_1/assignment/other.html
@@ -31,6 +31,13 @@
     </ul>
 </nav>
 
-<h1>Other</h1>
+<h1 class="header">Other</h1>
+
+
+<footer>
+    <p>Copyright © 2021 by StillUnknown<br>
+        <a href="mailto:knavinglogistic@hotmail.se">Mail to StillUnknown</a></p>
+</footer>
+
 </body>
 </html>
