--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -87,5 +87,10 @@
     </section>
 </section>
 
+<footer>
+    <p>Copyright © 2021 by StillUnknown<br>
+        <a href="mailto:knavinglogistic@hotmail.se">Mail to StillUnknown</a></p>
+</footer>
+
 </body>
 </html>
