Börjar med att skapa ytterligare två columns för about men då products bara ska ha får jag skapa två "sub columns".

--- a/webbutveckling_1/assignment/about.html
+++ b/webbutveckling_1/assignment/about.html
@@ -31,8 +31,77 @@
     </ul>
 </nav>
 
-<h1 class="header">About</h1>
+<h1 class="header">About me, Christoffer Knaving</h1>
 
+<section class="row">
+    <section class="column1">
+        <h2>Christoffer Knaving, who am i?</h2>
+        <article>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem beatae commodi, corporis earum
+                expedita maiores nam nemo nobis odit omnis porro praesentium quia. Deleniti impedit possimus quam
+                reiciendis voluptate.</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem beatae commodi, corporis earum
+                expedita maiores nam nemo nobis odit omnis porro praesentium quia. Deleniti impedit possimus quam
+                reiciendis voluptate.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem beatae commodi, corporis earum
+                expedita maiores nam nemo nobis odit omnis porro praesentium quia. Deleniti impedit possimus quam
+                reiciendis voluptate.
+            </p>
+        </article>
+    </section>
+    <section class="column2">
+        <img src="img/3090small.jpg" alt="3090 graphics card" height="400px">
+        <p>
+            <a href="https://www.pricerunner.se/sp/rtx-3090.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AiRtjPiUATUWFLfi6dmLdDn3T0UShcB28x1re_3K-Nbf6RyyQcfv3OBoCrkMQAvD_BwE"
+               target="_blank">Compare prices at Pricerunner</a></p>
+    </section>
+</section>
+
+<section class="row">
+    <section class="column3">
+        <img src="img/samsungg92.jpg" alt="Samsung G9 monitor" height="400px" width="600px">
+        <p>
+            <a href="https://www.pricerunner.se/sp/samsung-odyssey-g9.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AicuKymTKFCVsj3k9Uam9kTV24KN2K2X1RCLrXrGwfQembHI2IQLRxhoCclYQAvD_BwE"
+               target="_blank">Compare prices at Pricerunner</a></p>
+    </section>
+    <section class="column4">
+        <h2>SAMSUNG ODYSSEY G9</h2>
+        <p>"Odyssey delivers power and courage that makes the visual journey more exciting and immersive than ever.
+            Odyssey reflects tomorrow's gaming world and personifies the next generation of designs. We inspire courage
+            for gamers to dare to take on all kinds of challenges" -Komplett.se</p>
+        <p>"The Samsung 49-Inch Odyssey G9 has the most extreme curve we've seen yet, 1000R, and is one of the best
+            gaming monitors we've tested. At a comfortable viewing distance of 2-3 feet, it completely fills your
+            peripheral vision. But that's not all, it's a really good-looking monitor too" -Tomshardware.com</p>
+        <p>"
+            Is the Samsung Odyssey Neo G9 Worth Buying? The Samsung Odyssey Neo G9 is an excellent gaming monitor. It
+            delivers as much screen real estate as two 27-inch monitors without a bezel in the center and with an
+            incredible curve that brings you into the game" -Newsweek.com</p>
+    </section>
+</section>
+
+<section class="column5">
+    <img src="img/samsungg92.jpg" alt="Samsung G9 monitor" height="400px" width="600px">
+    <p>
+        <a href="https://www.pricerunner.se/sp/samsung-odyssey-g9.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AicuKymTKFCVsj3k9Uam9kTV24KN2K2X1RCLrXrGwfQembHI2IQLRxhoCclYQAvD_BwE"
+           target="_blank">Compare prices at Pricerunner</a></p>
+</section>
+<section class="column6">
+    <h2>SAMSUNG ODYSSEY G9</h2>
+    <p>"Odyssey delivers power and courage that makes the visual journey more exciting and immersive than ever.
+        Odyssey reflects tomorrow's gaming world and personifies the next generation of designs. We inspire courage
+        for gamers to dare to take on all kinds of challenges" -Komplett.se</p>
+    <p>"The Samsung 49-Inch Odyssey G9 has the most extreme curve we've seen yet, 1000R, and is one of the best
+        gaming monitors we've tested. At a comfortable viewing distance of 2-3 feet, it completely fills your
+        peripheral vision. But that's not all, it's a really good-looking monitor too" -Tomshardware.com</p>
+    <p>"
+        Is the Samsung Odyssey Neo G9 Worth Buying? The Samsung Odyssey Neo G9 is an excellent gaming monitor. It
+        delivers as much screen real estate as two 27-inch monitors without a bezel in the center and with an
+        incredible curve that brings you into the game" -Newsweek.com</p>
+</section>
 
 
 <footer>
