--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -6,7 +6,7 @@
     <title>Products</title>
     <link rel='stylesheet' href='css/style.css'>
 </head>
-<body>
+<body class="row">
 
 <nav>
     <ul id="navbar">
@@ -33,10 +33,10 @@
 
 <h1 class="header">Useful products for 4K gaming</h1>
 
-<section class="row">
-    <section class="column1">
+<section>
+    <section class="column1b">
         <h2>GEFORCE RTX™ 3090 GRAPHICS CARD</h2>
-        <section>
+        <article>
             <p>
                 "GeForce RTX ™ 3090 is a large and strong GPU with performance in the TITAN class. Featuring 2nd
                 generation NVIDIA RTX architecture Ampere, which enhances beam tracking and AI performance with enhanced
@@ -55,9 +55,9 @@
                 gaming performance in modern titles, bringing 4K – and 8K gaming according to Nvidia – at 60 frames per
                 second to desktop gaming PCs" -WEPC.com
             </p>
-        </section>
+        </article>
     </section>
-    <section class="column2">
+    <section class="column2b">
         <img src="img/3090small.jpg" alt="3090 graphics card" height="400px">
         <p>
             <a href="https://www.pricerunner.se/sp/rtx-3090.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AiRtjPiUATUWFLfi6dmLdDn3T0UShcB28x1re_3K-Nbf6RyyQcfv3OBoCrkMQAvD_BwE"
@@ -67,7 +67,7 @@
 
 <section class="row">
     <section class="column3">
-        <img src="img/samsungg92.jpg" alt="Samsung G9 monitor" height="400px">
+        <img src="img/samsungg92.jpg" alt="Samsung G9 monitor" height="400px" width="600px">
         <p>
             <a href="https://www.pricerunner.se/sp/samsung-odyssey-g9.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AicuKymTKFCVsj3k9Uam9kTV24KN2K2X1RCLrXrGwfQembHI2IQLRxhoCclYQAvD_BwE"
                target="_blank">Compare prices at Pricerunner</a></p>
