Borde göra fler commits men jag glömmer lätt när jag sitter och skriver. Har börjat på about-filen i ordning. Länkarna fungerar.

--- a/webbutveckling_1/assignment/courses.html
+++ b/webbutveckling_1/assignment/courses.html
@@ -36,8 +36,8 @@
 
 
 <footer>
-    <p>Copyright © 2021 by StillUnknown<br>
-        <a href="mailto:knavinglogistic@hotmail.se">Mail to StillUnknown</a></p>
+    <p>Copyright © 2021 by Christoffer Knaving<br>
+        <a href="mailto:knavinglogistic@hotmail.se">E-mail to Christoffer Knaving</a></p>
 </footer>
 
 </body>
