--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -88,8 +88,8 @@
 </section>
 
 <footer>
-    <p>Copyright © 2021 by StillUnknown<br>
-        <a href="mailto:knavinglogistic@hotmail.se">Mail to StillUnknown</a></p>
+    <p>Copyright © 2021 by Christoffer Knaving<br>
+        <a href="mailto:knavinglogistic@hotmail.se">E-mail to Christoffer Knaving</a></p>
 </footer>
 
 </body>
