Skapar en ny column i css, column 3b för att flytta enbart bilden i products.

--- a/webbutveckling_1/assignment/about.html
+++ b/webbutveckling_1/assignment/about.html
@@ -110,7 +110,8 @@
     <h2>Current occupation</h2>
     <p>
         I've had the same job for almost 17 years. It was physically touch and tedious and i finally decided enough was
-        enough and i applied for a course at Campus Mölndal called Webbutveckling (webdeveloper). If you'd like to know more about what the course is about, click the "Courses" in the header.
+        enough and i applied for a course at Campus Mölndal called Webbutveckling (webdeveloper). If you'd like to know
+        more about what the course is about, click the "Courses" in the header.
     </p>
 </section>
 <section class="column6">
