--- a/webbutveckling_1/assignment/index.html
+++ b/webbutveckling_1/assignment/index.html
@@ -32,8 +32,19 @@
     </ul>
 </nav>
 
-<h1 class="header">Index</h1>
+<h1 class="header">Welcome to my homepage</h1>
 
+<section class="middleindex">
+    <p>
+        Welcome to my homepage. What you'll find here is an product i made as an assignment during the course of two
+        weeks. The assignment was to create six different pages that all interlinks with eachother through a navbar. The
+        six pages should all have different themes but the esthetics should somewhat look the same.
+    </p>
+</section>
+
+<section>
+    <img src="img/penmeme.jpg" alt="penmeme" height="800px" class="imgmiddle">
+</section>
 
 
 <footer>
