--- a/webbutveckling_1/assignment/courses.html
+++ b/webbutveckling_1/assignment/courses.html
@@ -32,7 +32,129 @@
 </nav>
 
 <h1 class="header">Courses</h1>
+<p class="middle">To know more about the different courses in Webbutveckling, click on the link in the left side in the
+    table</p>
 
+<section>
+    <table class="center">
+        <tr style="background-color: aliceblue">
+            <th>Courses</th>
+            <th>Short info (the info is in swedish)</th>
+            <th>Weeks</th>
+        </tr>
+        <tr class="zoom" style="background-color: #5f93e8">
+            <td>Ork Matte</td>
+            <td>Vanlig jävla matte (hittar ingen lämplig sida att länka till här)</td>
+            <td>HT 2021<br>35-43</td>
+
+        </tr>
+        <tr class="zoom" style="background-color: coral">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWEU%26courseCode%3DWEUWEB01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_WEUWEB01"
+                    target="_blank">Webbutveckling 1</a></td>
+            <td>Ämnet webbutveckling behandlar de tekniker som används för att presentera och bearbeta information i
+                webbläsaren samt utifrån dessa tekniker skapa och vidareutveckla statiska och dynamiska webbsidor,
+                webbplatser eller webbapplikationer.
+            </td>
+            <td>HT 2021<br>33-38</td>
+        </tr>
+        <tr class="zoom" style="background-color: lightgray">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DPRR%26courseCode%3DPRRPRR01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_PRRPRR01"
+                    target="_blank">Programmering 1</a></td>
+            <td>Ämnet programmering behandlar hur mjukvaror skapas, anpassas och utvecklas samt programmeringens roll i
+                informationstekniska sammanhang som datorsimulering och praktisk datoriserad problemlösning.
+            </td>
+            <td>HT 2021<br>39-42</td>
+        </tr>
+        <tr class="zoom" style="background-color: yellow">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DDIG%26courseCode%3DDIGDIG01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_DIGDIG01"
+                    target="_blank">Digitalt
+                skapande 1</a></td>
+            <td>Ämnet digitalt skapande behandlar skapande och gestaltande processer med digitala verktyg i gränslandet
+                mellan konstnärligt skapande och teknik.
+            </td>
+            <td>HT 2021<br>43-44</td>
+        </tr>
+        <tr class="zoom" style="background-color: lightskyblue">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DGR%25C3%2584%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3"
+                    target="_blank">Gränssnittsdesign</a></td>
+            <td>Ämnet gränssnittsdesign behandlar interaktionen mellan dator och människa med fokus på designaspekterna
+                i utveckling av användbara, tillgängliga och tilltalande gränssnitt.
+            </td>
+            <td>HT 2021<br>45-47</td>
+        </tr>
+        <tr class="zoom" style="background-color: #04AA6D">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWEU%26courseCode%3DWEUWEB01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_WEUWEB01"
+                    target="_blank">Webbutveckling 2</a></td>
+            <td>Ämnet webbutveckling behandlar de tekniker som används för att presentera och bearbeta information i
+                webbläsaren samt utifrån dessa tekniker skapa och vidareutveckla statiska och dynamiska webbsidor,
+                webbplatser eller webbapplikationer.
+            </td>
+            <td>HT 2021<br>48-52</td>
+        </tr>
+        <tr class="zoom" style="background-color: #5f93e8">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWES%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3"
+                    target="_blank">Webserverprogrammering 1</a></td>
+            <td>Ämnet webbserverprogrammering behandlar funktionalitet för webblösningar och samspelet mellan
+                beställare, användare, formgivare och utvecklare.
+            </td>
+            <td>VT 2022<br>1-5</td>
+        </tr>
+        <tr class="zoom" style="background-color: coral">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DDAA%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3"
+                    target="_blank">Datalagring</a></td>
+            <td>Ämnet datalagring behandlar hur lösningar för datalagring designas och hur det är möjligt att effektivt
+                komma åt lagrad data från mjukvaruapplikationer. Ämnet datalagring får bara anordnas i vidareutbildning
+                i form av ett fjärde tekniskt år i gymnasieskolan.
+            </td>
+            <td>VT 2022<br>6-10</td>
+        </tr>
+        <tr class="zoom" style="background-color: lightgray">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DDIG%26courseCode%3DDIGDIG01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_DIGDIG01"
+                    target="_blank">Digitalt skapande 2</a></td>
+            <td>Ämnet digitalt skapande behandlar skapande och gestaltande processer med digitala verktyg i gränslandet
+                mellan konstnärligt skapande och teknik.
+            </td>
+            <td>VT 2022<br>11-13</td>
+        <tr class="zoom" style="background-color: yellow">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWES%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3"
+                    target="_blank">Webserverprogrammering 2</a></td>
+            <td>Ämnet webbserverprogrammering behandlar funktionalitet för webblösningar och samspelet mellan
+                beställare, användare, formgivare och utvecklare.
+            </td>
+            <td>VT 2022<br>14-18</td>
+        </tr>
+        <tr class="zoom" style="background-color: lightskyblue">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWEU%26courseCode%3DWEUWEB01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_WEUWEB01"
+                    target="_blank">Webbutveckling 3</a></td>
+            <td>Ämnet webbserverprogrammering behandlar funktionalitet för webblösningar och samspelet mellan
+                beställare, användare, formgivare och utvecklare.
+            </td>
+            <td>VT 2022<br>19-25</td>
+        </tr>
+        <tr class="zoom" style="background-color: #5f93e8">
+            <td><a
+                    href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DTEK%26courseCode%3DTEKTEK01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_TEKTEK01"
+                    target="_blank">Teknisk specialisering</a></td>
+            <td>Ämnet belyser teknikens roll i samhällsutvecklingen och samspelet mellan människa och natur.</td>
+            <td>HT 2022<br>32-37</td>
+        </tr>
+        <tr class="zoom" style="background-color: coral">
+            <td>ORK Data</td>
+            <td>Vanlig jävla data (hittar ingen lämplig sida att länka till här)</td>
+            <td>HT 2022<br>36-40</td>
+        </tr>
+    </table>
+</section>
 
 
 <footer>
