--- a/webbutveckling_1/assignment/products.html
+++ b/webbutveckling_1/assignment/products.html
@@ -66,7 +66,7 @@
 </section>
 
 <section class="row">
-    <section class="column3">
+    <section class="column3b">
         <img src="img/samsungg92.jpg" alt="Samsung G9 monitor" height="400px" width="600px">
         <p>
             <a href="https://www.pricerunner.se/sp/samsung-odyssey-g9.html?gclid=CjwKCAjwvuGJBhB1EiwACU1AicuKymTKFCVsj3k9Uam9kTV24KN2K2X1RCLrXrGwfQembHI2IQLRxhoCclYQAvD_BwE"
