--- a/webbutveckling_1/assignment/blogg.html
+++ b/webbutveckling_1/assignment/blogg.html
@@ -33,6 +33,9 @@
 
 <h1 class="header">Blogg</h1>
 
+<form>
+    <textarea>Hej jag heter Laban</textarea>
+</form>
 
 <footer>
     <p>Copyright © 2021 by Christoffer Knaving<br>
