--- a/webbutveckling_1/assignment/courses.html
+++ b/webbutveckling_1/assignment/courses.html
@@ -53,7 +53,7 @@
                     href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWEU%26courseCode%3DWEUWEB01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_WEUWEB01"
                     target="_blank">Webbutveckling 1</a></td>
             <td>Ämnet webbutveckling behandlar de tekniker som används för att presentera och bearbeta information i
-                webbläsaren samt utifrån dessa tekniker skapa och vidareutveckla statiska och dynamiska webbsidor,
+                webbläsaren samt<br>utifrån dessa tekniker skapa och vidareutveckla statiska och dynamiska webbsidor,
                 webbplatser eller webbapplikationer.
             </td>
             <td>HT 2021<br>33-38</td>
@@ -62,7 +62,7 @@
             <td><a
                     href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DPRR%26courseCode%3DPRRPRR01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_PRRPRR01"
                     target="_blank">Programmering 1</a></td>
-            <td>Ämnet programmering behandlar hur mjukvaror skapas, anpassas och utvecklas samt programmeringens roll i
+            <td>Ämnet programmering behandlar hur mjukvaror skapas, anpassas och utvecklas samt programmeringens<br>roll i
                 informationstekniska sammanhang som datorsimulering och praktisk datoriserad problemlösning.
             </td>
             <td>HT 2021<br>39-42</td>
@@ -72,7 +72,7 @@
                     href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DDIG%26courseCode%3DDIGDIG01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_DIGDIG01"
                     target="_blank">Digitalt
                 skapande 1</a></td>
-            <td>Ämnet digitalt skapande behandlar skapande och gestaltande processer med digitala verktyg i gränslandet
+            <td>Ämnet digitalt skapande behandlar skapande och gestaltande processer<br>med digitala verktyg i gränslandet
                 mellan konstnärligt skapande och teknik.
             </td>
             <td>HT 2021<br>43-44</td>
@@ -81,7 +81,7 @@
             <td><a
                     href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DGR%25C3%2584%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3"
                     target="_blank">Gränssnittsdesign</a></td>
-            <td>Ämnet gränssnittsdesign behandlar interaktionen mellan dator och människa med fokus på designaspekterna
+            <td>Ämnet gränssnittsdesign behandlar interaktionen mellan dator och människa med fokus<br>på designaspekterna
                 i utveckling av användbara, tillgängliga och tilltalande gränssnitt.
             </td>
             <td>HT 2021<br>45-47</td>
@@ -91,7 +91,7 @@
                     href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWEU%26courseCode%3DWEUWEB01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_WEUWEB01"
                     target="_blank">Webbutveckling 2</a></td>
             <td>Ämnet webbutveckling behandlar de tekniker som används för att presentera och bearbeta information i
-                webbläsaren samt utifrån dessa tekniker skapa och vidareutveckla statiska och dynamiska webbsidor,
+                webbläsaren<br>samt utifrån dessa tekniker skapa och vidareutveckla statiska och dynamiska webbsidor,
                 webbplatser eller webbapplikationer.
             </td>
             <td>HT 2021<br>48-52</td>
@@ -100,7 +100,7 @@
             <td><a
                     href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWES%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3"
                     target="_blank">Webserverprogrammering 1</a></td>
-            <td>Ämnet webbserverprogrammering behandlar funktionalitet för webblösningar och samspelet mellan
+            <td>Ämnet webbserverprogrammering behandlar funktionalitet för webblösningar<br>och samspelet mellan
                 beställare, användare, formgivare och utvecklare.
             </td>
             <td>VT 2022<br>1-5</td>
@@ -109,9 +109,8 @@
             <td><a
                     href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DDAA%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3"
                     target="_blank">Datalagring</a></td>
-            <td>Ämnet datalagring behandlar hur lösningar för datalagring designas och hur det är möjligt att effektivt
-                komma åt lagrad data från mjukvaruapplikationer. Ämnet datalagring får bara anordnas i vidareutbildning
-                i form av ett fjärde tekniskt år i gymnasieskolan.
+            <td>Ämnet datalagring behandlar hur lösningar för datalagring designas och hur<br>det är möjligt att effektivt
+                komma åt lagrad data från mjukvaruapplikationer.
             </td>
             <td>VT 2022<br>6-10</td>
         </tr>
@@ -119,7 +118,7 @@
             <td><a
                     href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DDIG%26courseCode%3DDIGDIG01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_DIGDIG01"
                     target="_blank">Digitalt skapande 2</a></td>
-            <td>Ämnet digitalt skapande behandlar skapande och gestaltande processer med digitala verktyg i gränslandet
+            <td>Ämnet digitalt skapande behandlar skapande och gestaltande processer med<br>digitala verktyg i gränslandet
                 mellan konstnärligt skapande och teknik.
             </td>
             <td>VT 2022<br>11-13</td>
@@ -127,7 +126,7 @@
             <td><a
                     href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWES%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3"
                     target="_blank">Webserverprogrammering 2</a></td>
-            <td>Ämnet webbserverprogrammering behandlar funktionalitet för webblösningar och samspelet mellan
+            <td>Ämnet webbserverprogrammering behandlar funktionalitet för webblösningar<br>och samspelet mellan
                 beställare, användare, formgivare och utvecklare.
             </td>
             <td>VT 2022<br>14-18</td>
@@ -136,9 +135,9 @@
             <td><a
                     href="https://www.skolverket.se/undervisning/gymnasieskolan/laroplan-program-och-amnen-i-gymnasieskolan/gymnasieprogrammen/amne?url=1530314731%2Fsyllabuscw%2Fjsp%2Fsubject.htm%3FsubjectCode%3DWEU%26courseCode%3DWEUWEB01%26tos%3Dgy&sv.url=12.5dfee44715d35a5cdfa92a3#anchor_WEUWEB01"
                     target="_blank">Webbutveckling 3</a></td>
-            <td>Ämnet webbserverprogrammering behandlar funktionalitet för webblösningar och samspelet mellan
-                beställare, användare, formgivare och utvecklare.
-            </td>
+            <td>Ämnet webbutveckling behandlar de tekniker som används för att presentera och bearbeta information i
+                webbläsaren<br>samt utifrån dessa tekniker skapa och vidareutveckla statiska och dynamiska webbsidor,
+                webbplatser eller webbapplikationer.</td>
             <td>VT 2022<br>19-25</td>
         </tr>
         <tr class="zoom" style="background-color: #5f93e8">
