Pushar en del av det jag hann skriva av under lektionen idag

--- a/webbutveckling_1/assignment/blogg.html
+++ b/webbutveckling_1/assignment/blogg.html
@@ -31,7 +31,7 @@
     </ul>
 </nav>
 
-<h1 class="header">Blogg</h1>
+<h1 class="header">Welcome to my blogg</h1>
 
 <form>
     <textarea>Hej jag heter Laban</textarea>
