--- a/webbutveckling_1/assignment/other.html
+++ b/webbutveckling_1/assignment/other.html
@@ -33,6 +33,9 @@
 
 <h1 class="header">Iframe</h1>
 
+<section>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/burNkdZG0Bs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</section>
 
 <footer>
     <p>Copyright © 2021 by Christoffer Knaving<br>
