--- a/webbutveckling_1/Lektioner/2021-09-13/grid/responsive-grid/index.html
+++ b/webbutveckling_1/Lektioner/2021-09-13/grid/responsive-grid/index.html
@@ -3,34 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive grid</title>
+    <title>Responsive Grid</title>
     <link rel='stylesheet' href='style.css'>
 </head>
 <body>
 
-<div class="container">
-    <header class="item-a">
+<div class='container'>
+    <header class='item-a'>
         header
     </header>
 
-    <nav class="item-b">
+    <nav class='item-b'>
         nav
     </nav>
 
-    <main class="item-c">
+    <main class='item-c'>
         main
     </main>
 
-    <aside class="item-d">
+    <aside class='item-d'>
         aside
     </aside>
 
-    <footer class="item-e">
+    <footer class='item-e'>
         footer
     </footer>
 </div>
-
-
 
 </body>
 </html>
