--- a/webbutveckling_1/assignment/index.html
+++ b/webbutveckling_1/assignment/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel='stylesheet' href='css/style.css'>
+    <link rel='stylesheet' href='css/indexstyle.css'>
+    <link rel='stylesheet' href='css/navbarstyle.css'>
+    <link rel='stylesheet' href='css/footerstyle.css'>
 
 </head>
 <body>
@@ -32,9 +34,11 @@
     </ul>
 </nav>
 
+<header>
 <h1 class="header">Welcome to my homepage</h1>
+</header>
 
-<section class="middleindex">
+<section class="center-text-on-screen">
     <p>
         Welcome to my homepage. What you'll find here is an product i made as an assignment during the course of two
         weeks. The assignment was to create six different pages that all interlinks with eachother through a navbar. The
