Har lagt in en responsive iframe med hjälp av W3S. Fixat bakgrunden med padding för footer.

--- a/webbutveckling_1/assignment/index.html
+++ b/webbutveckling_1/assignment/index.html
@@ -35,21 +35,20 @@
 </nav>
 
 <header>
-<h1 class="header">Welcome to my homepage</h1>
+    <h1 class="header">Welcome to my homepage</h1>
 </header>
 
-<section class="center-text-on-screen">
-    <p>
-        Welcome to my homepage. What you'll find here is an product i made as an assignment during the course of two
-        weeks. The assignment was to create six different pages that all interlinks with eachother through a navbar. The
-        six pages should all have different themes but the esthetics should somewhat look the same.
-    </p>
-</section>
+<main>
+    <section>
+        <p>
+            <strong>Welcome to my homepage. Feel free to navigate through the navbar at the top</strong>
+        </p>
+    </section>
 
-<section>
-    <img src="img/penmeme.jpg" alt="penmeme" height="800px" class="imgmiddle">
-</section>
-
+    <section>
+        <img src="img/ipaid2.jpg" alt="picture of dad holding a ipaid sign">
+    </section>
+</main>
 
 <footer>
     <p>Copyright © 2021 by Christoffer Knaving<br>
