--- a/webbutveckling_1/assignment/other.html
+++ b/webbutveckling_1/assignment/other.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Other</title>
-    <link rel='stylesheet' href='css/productsstyle.css'>
+    <link rel='stylesheet' href='css/otherstyle.css'>
+    <link rel='stylesheet' href='css/navbarstyle.css'>
+    <link rel='stylesheet' href='css/footerstyle.css'>
 </head>
 <body>
 
@@ -31,11 +33,20 @@
     </ul>
 </nav>
 
-<h1 class="header">Iframe</h1>
+<header>
+    <h1>Iframe</h1>
+</header>
 
-<section>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/burNkdZG0Bs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</section>
+<main>
+    <div class="iframe-container">
+        <section>
+            <iframe class="responsive-iframe" src="https://www.youtube.com/embed/burNkdZG0Bs"
+                    title="Linus Tech Tips reviews Samsung G9 Monitor"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+        </section>
+    </div>
+</main>
 
 <footer>
     <p>Copyright © 2021 by Christoffer Knaving<br>
