Har lagt in en responsive iframe med hjälp av W3S. Fixat bakgrunden med padding för footer.

--- a/webbutveckling_1/Lektioner/2021-09-13/grid/index.html
+++ b/webbutveckling_1/Lektioner/2021-09-13/grid/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-<div class='wrapper'>
+<div class='container'>
     <div>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ipsam, vitae? A ab alias animi asperiores aspernatur aut consectetur culpa cupiditate ea eius eligendi error fugit in, ipsam ipsum iste laboriosam nemo nisi nobis omnis pariatur provident quas quasi qui quia quisquam quod recusandae reiciendis soluta suscipit tempore ullam vel voluptatem. Amet deserunt dolorum et iusto laudantium nihil praesentium quae quasi voluptate voluptatibus. Est nemo nihil odio quidem ratione velit veniam. Ea eos molestiae nisi recusandae. Aliquid corporis iste natus!
     </div>
